crates/assay-harness/src/snapshots/assay_harness__opencode__tests__opencode_cli_args_full.snap
---
source: crates/assay-harness/src/opencode.rs
expression: "args.join(\"\\n\")"
---
run
--model
anthropic/claude-sonnet
--format
json
