crates/assay-harness/src/snapshots/assay_harness__opencode__tests__opencode_cli_args_minimal.snap
---
source: crates/assay-harness/src/opencode.rs
expression: "args.join(\"\\n\")"
---
run
--format
json
