crates/assay-harness/src/snapshots/assay_harness__opencode__tests__opencode_hooks_no_model_agents_md.snap
---
source: crates/assay-harness/src/opencode.rs
expression: config.agents_md
---
## Base

Base instructions.
---

## Hook Advisory

The following lifecycle hooks are defined for this session but cannot be
executed natively by OpenCode. They are listed here for reference:

- **before each tool invocation**: `echo pre`
- **after each tool invocation**: `echo post`
