crates/assay-harness/src/snapshots/assay_harness__opencode__tests__opencode_minimal_config_json.snap
---
source: crates/assay-harness/src/opencode.rs
expression: config.config_json
---
{
  "$schema": "https://opencode.ai/config.json"
}
