crates/assay-harness/src/snapshots/assay_harness__opencode__tests__opencode_realistic_config_json.snap
---
source: crates/assay-harness/src/opencode.rs
expression: config.config_json
---
{
  "$schema": "https://opencode.ai/config.json",
  "model": "anthropic/claude-sonnet",
  "tools": {
    "bash": true,
    "browser": true
  },
  "permission": {
    "bash": "allow",
    "browser": "allow",
    "edit": "allow"
  },
  "agent": {
    "steps": 50
  }
}
